- minor fix, text was not visible on white bg

--- a/BE/assets/scss/components/_login-popover.scss
+++ b/BE/assets/scss/components/_login-popover.scss
@@ -37,8 +37,8 @@
     input {
         @apply
         my-1
-        text-ctext-dark
-        dark:text-ctext-light
+        text-ctext-light
+        dark:text-ctext-dark
         rounded
         ;
     }
